--- a/src/components/OrderBuilder/ProductsArea/ProductsArea.module.css
+++ b/src/components/OrderBuilder/ProductsArea/ProductsArea.module.css
@@ -1,16 +1,9 @@
 .productsArea {
     padding: 0;
     margin: 0;
-    list-style: none;
-    
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    
+    display: block;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: space-between;
     width: 60%;
     float: left;
     text-align: center;
