fixes issue #35, issue #32, issue #24

--- a/src/components/OrderBuilder/OrderSummary/Order.module.css
+++ b/src/components/OrderBuilder/OrderSummary/Order.module.css
@@ -4,6 +4,8 @@
     border-radius: 5px;
     padding: 3px;
     text-align: left;
+    display: flex;
+    justify-content: space-between;
   }
   
   .Card:hover {
