--- a/src/components/OrderList/OrderCook.module.css
+++ b/src/components/OrderList/OrderCook.module.css
@@ -4,10 +4,11 @@
     border-radius: 5px;
     padding: 3px;
     text-align: left;
+    float: left;
+    width: 30%;
+    height: 300px;
   }
   
   .Card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    display: flex;
-    justify-content: space-between;
   }
