estilos a navChoice, mejorar

--- a/src/components/OrderList/OrderList.module.css
+++ b/src/components/OrderList/OrderList.module.css
@@ -1,6 +1,6 @@
 .OrderList {
-    padding: 0;
-    margin: 0;
+    padding: 10px;
+    margin: 10px;
     display: block;
     flex-flow: row wrap;
     justify-content: space-between;
