estilos css a NavChoice entre otros

--- a/src/components/OrderBuilder/OrderSummary/OrderSummary.module.css
+++ b/src/components/OrderBuilder/OrderSummary/OrderSummary.module.css
@@ -1,11 +1,10 @@
 .OrderSummary {
+    font: inherit;
     width: 40%;
     display: block;
     float: right;
     justify-content: center;
     text-align: center;
-    margin: auto;
-    padding: 10px 0;
     flex-flow: row;
 }
 
