--- a/src/components/OrderList/OrderCook.module.css
+++ b/src/components/OrderList/OrderCook.module.css
@@ -2,13 +2,12 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
-    padding: 3px;
     text-align: left;
     float: left;
-    width: 30%;
+    width: 33.33%;
     height: 300px;
   }
-  
-  .Card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
+
+.Container {
+  padding: 20px;
+}
