--- a/src/components/OrderList/OrderList.module.css
+++ b/src/components/OrderList/OrderList.module.css
@@ -1,10 +1,7 @@
 .OrderList {
-    padding: 10px;
-    margin: 10px;
-    display: block;
     flex-flow: row wrap;
     justify-content: space-between;
     width: 100%;
-    float: left;
     text-align: center;
+    margin: 0 auto;
 }
