--- a/src/components/Toolbar/NavItem/NavItem.module.css
+++ b/src/components/Toolbar/NavItem/NavItem.module.css
@@ -37,8 +37,10 @@
         color: #EAA81B;
         height: 100%;
         padding: 16px 10px;
+        font: inherit;
         font-weight: bold;
         background-color: #7D0000;
+        
     }
     
     .NavItem a:hover,
